@@ -27,6 +27,7 @@ Misc:
  - All: Improved PowerPC support
  - All: Fix some undefined behavior warnings
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
+ - Util: Use VFile for configuration
 
 0.3.1: (2015-10-24)
 Bugfixes:
